--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1><font color=#679DC1>
  welcome. 박정린의페이지
-<div>Teachable Machine Image Model</div>
+<div>Teachable Machine Image Model</div></h1></font color=#679DC1>
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
@@ -62,6 +62,6 @@
         }
     }
 </script>
-</h1></font color=#679DC1>
+
 </body>
 </html>
